@@ -1,3 +1,8 @@
+2001-09-11  Anders Carlsson  <andersca@gnu.org>
+
+	* gnome-program.c (gnome_module_info_get_type): Update to use
+	new api for g_boxed_type_register_static.
+
 Fri Sep 07 14:38:07 2001  George Lebl <jirka@5z.com>
 
 	* gnome-help.h: include gnome-program.h
